# fast-float-to-integer

./: Cargo.toml  changelog.md  readme.md
.cargo/: config.toml
.github/workflows/: check.yml
benchmark/: Cargo.toml
benchmark/benches/: benchmark.rs
generated assembly/x86_64_default/: f32_to_i128  f32_to_i16  f32_to_i32  f32_to_i64  f32_to_i8  f32_to_u16  f32_to_u32  f32_to_u64  f32_to_u8  f64_to_i128  f64_to_i16  f64_to_i32  f64_to_i64  f64_to_i8  f64_to_u16  f64_to_u32  f64_to_u64  f64_to_u8
generated assembly/x86_64_sse/: f32_to_i16  f32_to_i32  f32_to_i64  f32_to_i8  f32_to_u128  f32_to_u16  f32_to_u32  f32_to_u64  f32_to_u8  f64_to_i16  f64_to_i32  f64_to_i64  f64_to_i8  f64_to_u128  f64_to_u16  f64_to_u32  f64_to_u64  f64_to_u8
generated assembly/x86_sse/: f32_to_i128  f32_to_i16  f32_to_i32  f32_to_i64  f32_to_i8  f32_to_u128  f32_to_u16  f32_to_u32  f32_to_u64  f32_to_u8  f64_to_i128  f64_to_i16  f64_to_i32  f64_to_i64  f64_to_i8  f64_to_u128  f64_to_u16  f64_to_u32  f64_to_u64  f64_to_u8
src/: lib.rs  target_default.rs  target_x86_64_sse.rs  target_x86_sse.rs
tests/: test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
